@@ -145,30 +145,16 @@
     }
 
 {%- if view.advertising_enabled %}
-    {% if toggles('iqd_tablet_transformation') -%}
-        {%- if view.package == 'zeit.web.site' %}
-            {%- if view.is_hp %}
-                {# ZON HP: inflate 768-1000 screens always to 1280px #}
-                if ( screen.width >= window.Zeit.tabletMinWidth && screen.width < window.Zeit.maxWidth ) {
-                    window.Zeit.viewport.set( 'banner' );
-                }
-            {%- else %}
-                {# ZON other pages: inflate portrait tablets (768-1000px) to 1000px #}
-                if ( window.matchMedia( '(orientation: portrait)' ).matches && screen.width >= window.Zeit.tabletMinWidth && screen.width < window.Zeit.tabletSmallMinWidth) {
-                    window.Zeit.viewport.set( 'portrait' );
-                }
-            {%- endif %}
-        {%- endif %}
-    {% else %}
-        {%- if view.package == 'zeit.web.site' %}
-        {# /* ZON style: set viewport for tablets */ #}
+    {%- if view.package == 'zeit.web.site' %}
+        {%- if view.is_hp %}
+            {# ZON HP: inflate 768-1000 screens always to 1280px #}
             if ( screen.width >= window.Zeit.tabletMinWidth && screen.width < window.Zeit.maxWidth ) {
                 window.Zeit.viewport.set( 'banner' );
             }
-        {%- elif view.package == 'zeit.web.magazin' %}
-        {# /* ZMO style: set viewport for tablets in landscape mode */ #}
-            if ( screen.width >= window.Zeit.tabletMinWidth && screen.width < window.Zeit.maxWidth && window.Zeit.viewport.isLandscape() ) {
-                window.Zeit.viewport.set( 'banner' );
+        {%- else %}
+            {# ZON other pages: inflate portrait tablets (768-1000px) to 1000px #}
+            if ( window.matchMedia( '(orientation: portrait)' ).matches && screen.width >= window.Zeit.tabletMinWidth && screen.width < window.Zeit.tabletSmallMinWidth) {
+                window.Zeit.viewport.set( 'portrait' );
             }
         {%- endif %}
     {%- endif %}
